@@ -12,11 +12,48 @@
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+import re
+string_re = re.compile(r'(?<!\\)\$([a-z][\w_]+\b)', re.I)
+
 class Token(object):
     def __init__(self, name, parser):
         self.name = name
         self.line = parser.current_line
         self.char = parser.last_char
+
+
+    # Tokens that include variables in a string may use this callback to
+    # make sure that the variable is already declared.
+    def variable_test_cb(self, match):
+        varname = match.group(1)
+        value   = self.parent.get(varname)
+        if value is None:
+            self.char = self.char + self.string.find('$' + varname)
+            self.parent.generic_error(self, 'Undefined', 'Undefined variable %s' % varname)
+        elif type(value) == type(self.variable_test_cb):
+            self.char = self.char + self.string.find('$' + varname)
+            self.parent.generic_error(self, 'Undefined', '%s is not a variable name' % varname)
+        return match.group(0)
+
+
+    # Tokens that include variables in a string may use this callback to
+    # substitute the variable against its value.
+    def variable_sub_cb(self, match):
+        varname = match.group(1)
+        value   = self.parent.get(varname)
+        if value is None:
+            self.char = self.char + self.string.find('$' + varname)
+            self.parent.runtime_error(self, 'Undefined variable %s' % varname)
+        elif type(value) == type(self.variable_test_cb):
+            self.char = self.char + self.string.find('$' + varname)
+            self.parent.runtime_error(self, '%s is not a variable name' % varname)
+        elif type(value) == type([]):
+            if len(value) > 0:
+                value = '\n'.join([str(v) for v in value])
+            else:
+                value = ''
+        return value
+
 
     def value(self):
         raise Exception, "Abstract method, not implemented" #FIXME: Mark abstract
